--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
 body{
-	background: #51DA83;
+  background: #51DA83;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 .center{
   text-align: center;
-  padding-top: 100px;
+  padding-top: 20px;
+}
+
+.title {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 55px;
+  text-align: center;
+  font-weight: 900;
+  color: rgba(175, 47, 47, 0.9);
+  margin-bottom: 20px;
 }
 
 .gameField{
@@ -44,6 +56,36 @@ body{
   background-image: url(./img/fruit.jpg);
 }
 
+.results{
+  background: #04B4AE;
+  padding: 5px;
+  margin: 10px auto;
+  width: 250px;
+  border: 3px solid rgb(14, 87, 38);
+  border-radius: 3px;
+}
+.results ul{
+  text-align: left;
+  list-style-type: none;
+}
+.results ul li{
+  font-size: 22px;
+  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+}
+.results h2{
+  margin: 0;
+  font-family: 'Arvo', Georgia, Times, serif;
+}
+.resultsWrapTitle{
+  border: 3px solid rgb(14, 87, 38);
+}
+
+.saveResultForm{
+  margin: 0 auto;
+  width: 150px,
+}
+
 .newGame{
   width: 140px;
   height: 40px;
@@ -61,3 +103,5 @@ body{
   background: -ms-linear-gradient(top, #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 59%,#005700 83%,#002400 100%); /* IE10+ */
   background: linear-gradient(to bottom, #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 59%,#005700 83%,#002400 100%);
 }
+
+
